--- a/index.html
+++ b/index.html
@@ -10,11 +10,29 @@
 <title>Attogram Project on GitHub</title>
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head><body>
+<div class="container">
 
-The Attogram Project on GitHub:
+  <h1>The Attogram Project on GitHub</h1>
 
+  <div class="row">
+    <div class="class-sm-3">PROJECT</div>
+    <div class="class-sm-1">README</div>
+    <div class="class-sm-1">CHANGELOG</div>
+    <div class="class-sm-1">TODO</div>
+    <div class="class-sm-1">GITHUB</div>
+    <div class="class-sm-1">PACKAGIST</div>
+    <div class="class-sm-1">TRAVIS-CI</div>
+    <div class="class-sm-1">CODACITY</div>
+    <div class="class-sm-1">CODECLIMATE</div>
+    <div class="class-sm-1">MISC</div>
+  </div>
 
-<a href="https://attogram.github.io/">https://attogram.github.io/</a>
-
+<p><hr /></p>
+<footer>
+ <a href="https://attogram.github.io/">https://attogram.github.io/</a>
+ &nbsp; | &nbsp;
+ <a href="https://github.com/attogram">https://github.com/attogram</a>
+</footer>
+</div>
 </body>
 </html>
