--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
   </div>
 
 <p><hr /></p>
-<footer>
+<footer><small>
  <a href="https://attogram.github.io/">https://attogram.github.io/</a>
  &nbsp; | &nbsp;
  <a href="https://github.com/attogram">https://github.com/attogram</a>
-</footer>
+ &nbsp; | &nbsp;
+ <a href="https://patreon.com/attogram">https://patreon.com/attogram</a>
+</small></footer>
 </div>
 </body>
 </html>
