--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
   <h1>The Attogram Project on GitHub</h1>
 
-  <div class="row">
-    <div class="class-sm-3">PROJECT</div>
-    <div class="class-sm-1">README</div>
-    <div class="class-sm-1">CHANGELOG</div>
-    <div class="class-sm-1">TODO</div>
-    <div class="class-sm-1">GITHUB</div>
-    <div class="class-sm-1">PACKAGIST</div>
-    <div class="class-sm-1">TRAVIS-CI</div>
-    <div class="class-sm-1">CODACITY</div>
-    <div class="class-sm-1">CODECLIMATE</div>
-    <div class="class-sm-1">MISC</div>
+  <div class="row" style="border:1px solid #ddd;">
+    <div class="col-sm-3">PROJECT</div>
+    <div class="col-sm-1">README</div>
+    <div class="col-sm-1">CHANGELOG</div>
+    <div class="col-sm-1">TODO</div>
+    <div class="col-sm-1">GITHUB</div>
+    <div class="col-sm-1">PACKAGIST</div>
+    <div class="col-sm-1">TRAVIS-CI</div>
+    <div class="col-sm-1">CODACITY</div>
+    <div class="col-sm-1">CODECLIMATE</div>
+    <div class="col-sm-1">MISC</div>
   </div>
 
 <p><hr /></p>
