--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="col-sm-1"><a href="https://github.com/attogram/attogram/blob/master/TODO.md">TODO</a></div>
     <div class="col-sm-1"><a href="https://github.com/attogram/attogram">attogram/attogram</a></div>
     <div class="col-sm-1"><a href="https://packagist.org/packages/attogram/attogram-framework">attogram/attogram-framework</a></div>
-    <div class="col-sm-1"><a href="https://travis-ci.org/attogram/attogram">attogram/attogram</a></div>
+    <div class="col-sm-1"><a href="https://travis-ci.org/attogram/attogram"><img src="https://travis-ci.org/attogram/attogram.svg?branch=master"></a></div>
     <div class="col-sm-1"><a href="https://www.codacy.com/app/attogram-project/attogram/dashboard">attogram-project/attogram</a></div>
     <div class="col-sm-1"><a href="https://codeclimate.com/github/attogram/attogram">attogram/attogram</a></div>
     <div class="col-sm-1"></div>
