--- a/index.html
+++ b/index.html
@@ -19,25 +19,21 @@
     <div class="col-sm-1">README</div>
     <div class="col-sm-1">CHANGELOG</div>
     <div class="col-sm-1">TODO</div>
-    <div class="col-sm-1">GITHUB</div>
     <div class="col-sm-1">PACKAGIST</div>
     <div class="col-sm-1">TRAVIS-CI</div>
     <div class="col-sm-1">CODACITY</div>
     <div class="col-sm-1">CODECLIMATE</div>
-    <div class="col-sm-1">...</div>
   </div>
 
   <div class="row" style="border:1px solid #ddd;">
-    <div class="col-sm-3">Attogram Framework</div>
+    <div class="col-sm-1"><a href="https://github.com/attogram/attogram">Attogram Framework</a></div>
     <div class="col-sm-1"><a href="https://github.com/attogram/attogram/blob/master/README.md">README</a></div>
     <div class="col-sm-1"><a href="https://github.com/attogram/attogram/blob/master/CHANGELOG.md">CHANGELOG</a></div>
     <div class="col-sm-1"><a href="https://github.com/attogram/attogram/blob/master/TODO.md">TODO</a></div>
-    <div class="col-sm-1"><a href="https://github.com/attogram/attogram">attogram/attogram</a></div>
     <div class="col-sm-1"><a href="https://packagist.org/packages/attogram/attogram-framework">attogram/attogram-framework</a></div>
     <div class="col-sm-1"><a href="https://travis-ci.org/attogram/attogram"><img src="https://travis-ci.org/attogram/attogram.svg?branch=master"></a></div>
     <div class="col-sm-1"><a href="https://www.codacy.com/app/attogram-project/attogram/dashboard">attogram-project/attogram</a></div>
     <div class="col-sm-1"><a href="https://codeclimate.com/github/attogram/attogram">attogram/attogram</a></div>
-    <div class="col-sm-1"></div>
   </div>
 
 <p><hr /></p>
