--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 <![endif]-->
-<title>Attogram Project on GitHub</title>
+<title>The Attogram Project</title>
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script><script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 </head><body>
 <div class="container">
 
-  <h1>The Attogram Project on GitHub</h1>
+  <h1>The Attogram Project</h1>
 
   <div class="row rowb small text-muted">
     <div class="col-md-4">PROJECT</div>
     <div class="col-md-2">INFO</div>
-    <div class="col-md-1">PACKAGIST</div>
+    <div class="col-md-2">PACKAGIST</div>
     <div class="col-md-1">TRAVIS-CI</div>
     <div class="col-md-1">CODACITY</div>
-    <div class="col-md-1">CODECLIMATE</div>
+    <div class="col-md-2">CODECLIMATE</div>
   </div>
 
   <div class="row rowb" style="border:1px solid #ddd; padding:5px;">
     <div class="col-sm-4">
-      <h3 class="squished"><a href="https://github.com/attogram/attogram">Attogram Framework</a></h3>
+      <h2 class="squished"><a href="https://github.com/attogram/attogram">Attogram Framework</a></h2>
       provides developers a PHP skeleton starter site with content modules, file-based URL routing,
       IP-protected backend, user system, integrated SQLite database with web admin, Markdown parser,
       jQuery and Bootstrap. After that, Attogram tries to stay out of your way while you do your thing!
@@ -37,14 +37,29 @@
     <div class="col-md-2">
         <a href="https://github.com/attogram/attogram/blob/master/README.md">README</a>
         <br /><a href="https://github.com/attogram/attogram/blob/master/CHANGELOG.md">CHANGELOG</a>
-        <br /><a href="https://github.com/attogram/attogram/blob/master/LICENSE.md">LICENSE</a>
         <br /><a href="https://github.com/attogram/attogram/blob/master/TODO.md">TODO</a>
+        <br /><a href="https://github.com/attogram/attogram/blob/master/LICENSE.md">LICENSE</a>
     </div>
-    <div class="col-md-1"><a href="https://packagist.org/packages/attogram/attogram-framework">attogram/attogram-framework</a></div>
-    <div class="col-md-1"><a href="https://travis-ci.org/attogram/attogram"><img src="https://travis-ci.org/attogram/attogram.svg?branch=master"></a></div>
-    <div class="col-md-1"><a href="https://www.codacy.com/app/attogram-project/attogram/dashboard">attogram-project/attogram</a></div>
-    <div class="col-md-1"><a href="https://codeclimate.com/github/attogram/attogram">attogram/attogram</a></div>
+    <div class="col-md-2">
+        <a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/v/stable" alt="Latest Stable Version" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/v/unstable" alt="Latest Unstable Version" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/downloads" alt="Total Downloads" /></a>
+        <br /><a href="https://github.com/attogram/attogram-framework/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-framework/license" alt="License" /></a>
+    </div>
+    <div class="col-md-1">
+      <a href="https://travis-ci.org/attogram/attogram"><img src="https://travis-ci.org/attogram/attogram.svg?branch=master"></a>
+    </div>
+    <div class="col-md-1">
+        <a href="https://www.codacy.com/app/attogram-project/attogram?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/0a50344b228f46c98ffb06b78b99cbe0"/></a>
+    </div>
+    <div class="col-md-2">
+      <a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/gpa.svg" alt="Code Climate" /></a>
+      <a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/issue_count.svg" alt="Issue Count" /></a>
+    </div>
   </div>
+
+
+
 
 <p><hr /></p>
 <footer><small>
