--- a/index.html
+++ b/index.html
@@ -59,15 +59,13 @@
   </div>
 
 
-
-
-<p><hr /></p>
+<p><br /></p>
 <footer><small>
- <a href="https://attogram.github.io/">https://attogram.github.io/</a>
+ <a href="https://attogram.github.io/">attogram.github.io</a>
  &nbsp; | &nbsp;
- <a href="https://github.com/attogram">https://github.com/attogram</a>
+ <a href="https://github.com/attogram"><strong>github</strong>.com/attogram</a>
  &nbsp; | &nbsp;
- <a href="https://patreon.com/attogram">https://patreon.com/attogram</a>
+ <a href="https://patreon.com/attogram"><strong>patreon</strong>.com/attogram</a>
 </small></footer>
 </div>
 </body>
