--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
 
 <p><br /></p>
 <footer><small>
- <a href="https://attogram.github.io/">attogram.github.io</a>
- &nbsp; | &nbsp;
- <a href="https://github.com/attogram"><strong>github</strong>.com/attogram</a>
- &nbsp; | &nbsp;
- <a href="https://patreon.com/attogram"><strong>patreon</strong>.com/attogram</a>
+<a href="https://attogram.github.io/"><strong>attogram</strong>.github.io</a>
+ &nbsp; | &nbsp; <a href="https://github.com/attogram"><strong>github</strong>.com/attogram</a>
+ &nbsp; | &nbsp; <a href="https://patreon.com/attogram"><strong>patreon</strong>.com/attogram</a>
+ &nbsp; | &nbsp; <a href="https://packagist.org/packages/attogram/"><strong>packagist</strong>.org/packages/attogram</a>
+ &nbsp; | &nbsp; <a href="https://travis-ci.org/attogram"><strong>travis-ci</strong>.org/attogram</a>
+
 </small></footer>
 </div>
 </body>
