--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="col-md-2">INFO</div>
     <div class="col-md-2">PACKAGIST</div>
     <div class="col-md-1">TRAVIS-CI</div>
-    <div class="col-md-1">CODACITY</div>
+    <div class="col-md-1">CODACY</div>
     <div class="col-md-2">CODECLIMATE</div>
   </div>
 
