--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <style>
 .squished { margin:0; padding:0; }
-.rowb { border:1px solid #ddd; padding:5px; }
+.rowb { border:1px solid #ddd; padding:10px; margin:0; }
 </style>
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -22,17 +22,17 @@
     <div class="col-md-4">PROJECT</div>
     <div class="col-md-2">INFO</div>
     <div class="col-md-2">PACKAGIST</div>
-    <div class="col-md-1">TRAVIS-CI</div>
-    <div class="col-md-1">CODACY</div>
-    <div class="col-md-2">CODECLIMATE</div>
+    <div class="col-md-2">CHECKS</div>
+    <div class="col-md-2">BUILDS</div>
   </div>
 
   <div class="row rowb" style="border:1px solid #ddd; padding:5px;">
     <div class="col-sm-4">
       <h2 class="squished"><a href="https://github.com/attogram/attogram">Attogram Framework</a></h2>
-      provides developers a PHP skeleton starter site with content modules, file-based URL routing,
-      IP-protected backend, user system, integrated SQLite database with web admin, Markdown parser,
-      jQuery and Bootstrap. After that, Attogram tries to stay out of your way while you do your thing!
+      The Attogram Framework provides developers a PHP skeleton starter site with content modules,
+      file-based URL routing, IP-protected backend, user system, integrated SQLite database with web admin,
+      Markdown parser, jQuery and Bootstrap.
+      After that, Attogram tries to stay out of your way while you do your thing!
     </div>
     <div class="col-md-2">
         <a href="https://github.com/attogram/attogram/blob/master/README.md">README</a>
@@ -44,20 +44,46 @@
         <a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/v/stable" alt="Latest Stable Version" /></a>
         <br /><a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/v/unstable" alt="Latest Unstable Version" /></a>
         <br /><a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/downloads" alt="Total Downloads" /></a>
-        <br /><a href="https://github.com/attogram/attogram-framework/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-framework/license" alt="License" /></a>
-    </div>
-    <div class="col-md-1">
-      <a href="https://travis-ci.org/attogram/attogram"><img src="https://travis-ci.org/attogram/attogram.svg?branch=master"></a>
-    </div>
-    <div class="col-md-1">
-        <a href="https://www.codacy.com/app/attogram-project/attogram?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/0a50344b228f46c98ffb06b78b99cbe0"/></a>
+        <br /><a href="https://github.com/attogram/attogram/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-framework/license" alt="License" /></a>
     </div>
     <div class="col-md-2">
-      <a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/gpa.svg" alt="Code Climate" /></a>
-      <a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/issue_count.svg" alt="Issue Count" /></a>
+        <a href="https://www.codacy.com/app/attogram-project/attogram?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/0a50344b228f46c98ffb06b78b99cbe0"/></a>
+        <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/gpa.svg" alt="Code Climate" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/issue_count.svg" alt="Issue Count" /></a>
+    </div>
+    <div class="col-md-2">
+        <a href="https://travis-ci.org/attogram/attogram"><img src="https://travis-ci.org/attogram/attogram.svg?branch=master"></a>
     </div>
   </div>
 
+  <div class="row rowb" style="border:1px solid #ddd; padding:5px;">
+    <div class="col-sm-4">
+      <h2 class="squished"><a href="https://github.com/attogram/ote">Open Translation Engine</a></h2>
+      The Open Translation Engine is a collaborative translation dictionary manager for the open content web.
+      <br />PHP / SQLite / Attogram Framework module
+    </div>
+    <div class="col-md-2">
+        <a href="https://github.com/attogram/ote/blob/master/README.md">README</a>
+        <br /><a href="https://github.com/attogram/ote/blob/master/CHANGELOG.md">CHANGELOG</a>
+        <br /><a href="https://github.com/attogram/ote/blob/master/TODO.md">TODO</a>
+        <br /><a href="https://github.com/attogram/ote/blob/master/LICENSE.md">LICENSE</a>
+        <br /><a href="https://github.com/attogram/ote/blob/master/INSTALLATIONS.md">INSTALLATIONS</a>
+    </div>
+    <div class="col-md-2">
+        <a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/v/stable" alt="Latest Stable Version" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/v/unstable" alt="Latest Unstable Version" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/downloads" alt="Total Downloads" /></a>
+        <br /><a href="https://github.com/attogram/ote/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/open-translation-engine/license" alt="License" /></a>
+    </div>
+    <div class="col-md-2">
+        <a href="https://www.codacy.com/app/attogram-project/ote?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/ote&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/a078450b69e84d9e8a85232f22b5c5ef"/></a>
+        <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/ote/badges/gpa.svg" alt="Code Climate" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/ote/badges/issue_count.svg" alt="Issue Count" /></a>
+    </div>
+    <div class="col-md-2">
+        <a href="https://travis-ci.org/attogram/ote"><img src="https://travis-ci.org/attogram/ote.svg?branch=master"></a>
+    </div>
+  </div>
 
 <p><br /></p>
 <footer><small>
