--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   <h1>The Attogram Project</h1>
 
   <div class="row rowb small text-muted">
-    <div class="col-md-4">PROJECT</div>
-    <div class="col-md-2">INFO</div>
-    <div class="col-md-2">PACKAGIST</div>
-    <div class="col-md-2">CHECKS</div>
-    <div class="col-md-2">BUILDS</div>
+    <div class="col-sm-4">PROJECT</div>
+    <div class="col-sm-2">INFO</div>
+    <div class="col-sm-2">PACKAGIST</div>
+    <div class="col-sm-2">CHECKS</div>
+    <div class="col-sm-2">BUILDS</div>
   </div>
 
   <div class="row rowb" style="border:1px solid #ddd; padding:5px;">
@@ -34,24 +34,24 @@
       Markdown parser, jQuery and Bootstrap.
       After that, Attogram tries to stay out of your way while you do your thing!
     </div>
-    <div class="col-md-2">
+    <div class="col-sm-2">
         <a href="https://github.com/attogram/attogram/blob/master/README.md">README</a>
         <br /><a href="https://github.com/attogram/attogram/blob/master/CHANGELOG.md">CHANGELOG</a>
         <br /><a href="https://github.com/attogram/attogram/blob/master/TODO.md">TODO</a>
         <br /><a href="https://github.com/attogram/attogram/blob/master/LICENSE.md">LICENSE</a>
     </div>
-    <div class="col-md-2">
+    <div class="col-sm-2">
         <a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/v/stable" alt="Latest Stable Version" /></a>
         <br /><a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/v/unstable" alt="Latest Unstable Version" /></a>
         <br /><a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/downloads" alt="Total Downloads" /></a>
         <br /><a href="https://github.com/attogram/attogram/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-framework/license" alt="License" /></a>
     </div>
-    <div class="col-md-2">
+    <div class="col-sm-2">
         <a href="https://www.codacy.com/app/attogram-project/attogram?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/0a50344b228f46c98ffb06b78b99cbe0"/></a>
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
-    <div class="col-md-2">
+    <div class="col-sm-2">
         <a href="https://travis-ci.org/attogram/attogram"><img src="https://travis-ci.org/attogram/attogram.svg?branch=master"></a>
     </div>
   </div>
@@ -62,25 +62,25 @@
       The Open Translation Engine is a collaborative translation dictionary manager for the open content web.
       <br />PHP / SQLite / Attogram Framework module
     </div>
-    <div class="col-md-2">
+    <div class="col-sm-2">
         <a href="https://github.com/attogram/ote/blob/master/README.md">README</a>
         <br /><a href="https://github.com/attogram/ote/blob/master/CHANGELOG.md">CHANGELOG</a>
         <br /><a href="https://github.com/attogram/ote/blob/master/TODO.md">TODO</a>
         <br /><a href="https://github.com/attogram/ote/blob/master/LICENSE.md">LICENSE</a>
         <br /><a href="https://github.com/attogram/ote/blob/master/INSTALLATIONS.md">INSTALLATIONS</a>
     </div>
-    <div class="col-md-2">
+    <div class="col-sm-2">
         <a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/v/stable" alt="Latest Stable Version" /></a>
         <br /><a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/v/unstable" alt="Latest Unstable Version" /></a>
         <br /><a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/downloads" alt="Total Downloads" /></a>
         <br /><a href="https://github.com/attogram/ote/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/open-translation-engine/license" alt="License" /></a>
     </div>
-    <div class="col-md-2">
+    <div class="col-sm-2">
         <a href="https://www.codacy.com/app/attogram-project/ote?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/ote&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/a078450b69e84d9e8a85232f22b5c5ef"/></a>
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/ote/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/ote/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
-    <div class="col-md-2">
+    <div class="col-sm-2">
         <a href="https://travis-ci.org/attogram/ote"><img src="https://travis-ci.org/attogram/ote.svg?branch=master"></a>
     </div>
   </div>
