--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <style>
 .squished { margin:0; padding:0; }
-.rowb { border:1px solid #ddd; padding:10px; margin:0; }
+.rowb { border:1px solid #ddd; padding:18px; margin:0; }
 </style>
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -16,17 +16,9 @@
 </head><body>
 <div class="container-fluid">
 
-  <h1>The Attogram Project</h1>
+  <h1 class="bg-primary rowb">The Attogram Project</h1>
 
-  <div class="row rowb small text-muted">
-    <div class="col-sm-4">PROJECT</div>
-    <div class="col-sm-2">INFO</div>
-    <div class="col-sm-2">PACKAGIST</div>
-    <div class="col-sm-2">CHECKS</div>
-    <div class="col-sm-2">BUILDS</div>
-  </div>
-
-  <div class="row rowb" style="border:1px solid #ddd; padding:5px;">
+  <div class="row rowb">
     <div class="col-sm-4">
       <h2 class="squished"><a href="https://github.com/attogram/attogram">Attogram Framework</a></h2>
       The Attogram Framework provides developers a PHP skeleton starter site with content modules,
@@ -56,7 +48,7 @@
     </div>
   </div>
 
-  <div class="row rowb" style="border:1px solid #ddd; padding:5px;">
+  <div class="row rowb">
     <div class="col-sm-4">
       <h2 class="squished"><a href="https://github.com/attogram/ote">Open Translation Engine</a></h2>
       The Open Translation Engine is a collaborative translation dictionary manager for the open content web.
