--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <h1 class="bg-primary rowb">The Attogram Project</h1>
 
   <div class="row rowb">
-    <div class="col-sm-4">
+    <div class="col-sm-5">
       <h2 class="squished"><a href="https://github.com/attogram/attogram">Attogram Framework</a></h2>
       The Attogram Framework provides developers a PHP skeleton starter site with content modules,
       file-based URL routing, IP-protected backend, user system, integrated SQLite database with web admin,
@@ -33,7 +33,8 @@
         <br /><a href="https://github.com/attogram/attogram/blob/master/LICENSE.md">LICENSE</a>
     </div>
     <div class="col-sm-2">
-        <a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/v/stable" alt="Latest Stable Version" /></a>
+        <a href="https://travis-ci.org/attogram/attogram"><img src="https://travis-ci.org/attogram/attogram.svg?branch=master"></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/v/stable" alt="Latest Stable Version" /></a>
         <br /><a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/v/unstable" alt="Latest Unstable Version" /></a>
         <br /><a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/downloads" alt="Total Downloads" /></a>
         <br /><a href="https://github.com/attogram/attogram/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-framework/license" alt="License" /></a>
@@ -43,13 +44,10 @@
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
-    <div class="col-sm-2">
-        <a href="https://travis-ci.org/attogram/attogram"><img src="https://travis-ci.org/attogram/attogram.svg?branch=master"></a>
-    </div>
   </div>
 
   <div class="row rowb">
-    <div class="col-sm-4">
+    <div class="col-sm-5">
       <h2 class="squished"><a href="https://github.com/attogram/ote">Open Translation Engine</a></h2>
       The Open Translation Engine is a collaborative translation dictionary manager for the open content web.
       <br />PHP / SQLite / Attogram Framework module
@@ -62,7 +60,8 @@
         <br /><a href="https://github.com/attogram/ote/blob/master/INSTALLATIONS.md">INSTALLATIONS</a>
     </div>
     <div class="col-sm-2">
-        <a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/v/stable" alt="Latest Stable Version" /></a>
+        <a href="https://travis-ci.org/attogram/ote"><img src="https://travis-ci.org/attogram/ote.svg?branch=master"></a>
+        <br /><a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/v/stable" alt="Latest Stable Version" /></a>
         <br /><a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/v/unstable" alt="Latest Unstable Version" /></a>
         <br /><a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/downloads" alt="Total Downloads" /></a>
         <br /><a href="https://github.com/attogram/ote/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/open-translation-engine/license" alt="License" /></a>
@@ -72,20 +71,19 @@
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/ote/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/ote/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
-    <div class="col-sm-2">
-        <a href="https://travis-ci.org/attogram/ote"><img src="https://travis-ci.org/attogram/ote.svg?branch=master"></a>
-    </div>
   </div>
 
-<p><br /></p>
-<footer><small>
-<a href="https://attogram.github.io/"><strong>attogram</strong>.github.io</a>
+
+<footer class="text-center">
+  <p><br /></p>
+  <small>
+ <a href="https://attogram.github.io/"><strong>attogram</strong>.github.io</a>
  &nbsp; | &nbsp; <a href="https://github.com/attogram"><strong>github</strong>.com/attogram</a>
  &nbsp; | &nbsp; <a href="https://patreon.com/attogram"><strong>patreon</strong>.com/attogram</a>
  &nbsp; | &nbsp; <a href="https://packagist.org/packages/attogram/"><strong>packagist</strong>.org/packages/attogram</a>
  &nbsp; | &nbsp; <a href="https://travis-ci.org/attogram"><strong>travis-ci</strong>.org/attogram</a>
-
-</small></footer>
+ </small>
+</footer>
 </div>
 </body>
 </html>
