--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <br /><a href="https://github.com/attogram/attogram/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-framework/license" alt="License" /></a>
     </div>
     <div class="col-sm-3">
-        <a href="https://www.codacy.com/app/attogram-project/attogram?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/0a50344b228f46c98ffb06b78b99cbe0"/></a>
+        <a href="https://www.codacy.com/app/attogram-project/attogram?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/0a50344b228f46c98ffb06b78b99cbe0" alt="Score" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
@@ -67,7 +67,7 @@
         <br /><a href="https://github.com/attogram/ote/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/open-translation-engine/license" alt="License" /></a>
     </div>
     <div class="col-sm-3">
-        <a href="https://www.codacy.com/app/attogram-project/ote?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/ote&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/a078450b69e84d9e8a85232f22b5c5ef"/></a>
+        <a href="https://www.codacy.com/app/attogram-project/ote?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/ote&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/a078450b69e84d9e8a85232f22b5c5ef" alt="Score" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/ote/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/ote/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
