--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <br /><a href="https://github.com/attogram/attogram/blob/master/LICENSE.md">LICENSE</a>
     </div>
     <div class="col-sm-2">
-        <a href="https://travis-ci.org/attogram/attogram"><img src="https://travis-ci.org/attogram/attogram.svg?branch=master"></a>
+        <a href="https://travis-ci.org/attogram/attogram"><img src="https://travis-ci.org/attogram/attogram.svg?branch=master" alt="Build" /></a>
         <br /><a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/v/stable" alt="Latest Stable Version" /></a>
         <br /><a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/downloads" alt="Total Downloads" /></a>
         <br /><a href="https://packagist.org/packages/attogram/attogram-framework"><img src="https://poser.pugx.org/attogram/attogram-framework/v/unstable" alt="Latest Unstable Version" /></a>
@@ -60,7 +60,7 @@
         <br /><a href="https://github.com/attogram/ote/blob/master/INSTALLATIONS.md">INSTALLATIONS</a>
     </div>
     <div class="col-sm-2">
-        <a href="https://travis-ci.org/attogram/ote"><img src="https://travis-ci.org/attogram/ote.svg?branch=master"></a>
+        <a href="https://travis-ci.org/attogram/ote"><img src="https://travis-ci.org/attogram/ote.svg?branch=master" alt="Build" /></a>
         <br /><a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/v/stable" alt="Latest Stable Version" /></a>
         <br /><a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/downloads" alt="Total Downloads" /></a>
         <br /><a href="https://packagist.org/packages/attogram/open-translation-engine"><img src="https://poser.pugx.org/attogram/open-translation-engine/v/unstable" alt="Latest Unstable Version" /></a>
