--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <style>
+a:hover { background-color:yellow; color:black; }
+a:active { background-color:orange; color:black; }
+.row:hover { background-color:lightyellow; }
 .squished { margin:0; padding:0; }
 .rowb { border:1px solid #ddd; padding:18px; margin:0; }
 </style>
@@ -16,7 +19,7 @@
 </head><body>
 <div class="container-fluid">
 
-  <h1 class="bg-primary rowb">The Attogram Project</h1>
+  <h1 class="bg-primary rowb"><a href="https://github.com/attogram/" style="color:#fff;">The Attogram Project</a></h1>
 
   <div class="row rowb">
     <div class="col-sm-5">
