--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <style>
-a:hover { background-color:yellow; color:black; }
-a:active { background-color:orange; color:black; }
-.row:hover { background-color:lightyellow; }
+a:hover { background-color:yellow; color:black; text-decoration:none; }
+a:active { background-color:orange; color:black; text-decoration:none; }
+.row:hover { background-color:lightyellow; text-decoration:none; }
+.headb { color:white; }
+.headb:hover { background-color:yellow; color:black; text-decoration:none; }
+.headb:active { background-color:orange; color:black; text-decoration:none; }
 .squished { margin:0; padding:0; }
 .rowb { border:1px solid #ddd; padding:18px; margin:0; }
 </style>
@@ -19,7 +22,7 @@ a:active { background-color:orange; color:black; }
 </head><body>
 <div class="container-fluid">
 
-  <h1 class="bg-primary rowb"><a href="https://github.com/attogram/" style="color:#fff;">The Attogram Project</a></h1>
+  <h1 class="bg-primary rowb"><a href="https://github.com/attogram/" class="headb">The Attogram Project</a></h1>
 
   <div class="row rowb">
     <div class="col-sm-5">
