--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ a:active { background-color:orange; color:black; text-decoration:none; }
     </div>
     <div class="col-sm-3">
         <a href="https://www.codacy.com/app/attogram-project/attogram?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/0a50344b228f46c98ffb06b78b99cbe0" alt="Score" /></a>
-        <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/gpa.svg" alt="Code Climate" /></a>
-        <br /><a href="https://codeclimate.com/github/attogram/ote"><img src="https://codeclimate.com/github/attogram/attogram/badges/issue_count.svg" alt="Issue Count" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/attogram"><img src="https://codeclimate.com/github/attogram/attogram/badges/gpa.svg" alt="Code Climate" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/attogram"><img src="https://codeclimate.com/github/attogram/attogram/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
   </div>
 
