--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@ a:active { background-color:orange; color:black; text-decoration:none; }
     </div>
   </div>
 
+  <div class="row rowb">
+    <div class="col-sm-5">
+      <h2 class="squished"><a href="https://github.com/attogram/DAMS">Dictionary Additions Management Systems</a></h2>
+      Open Content translation dictionary files.
+    </div>
+    <div class="col-sm-2">
+        <a href="https://github.com/attogram/DAMS/blob/master/README.md">README</a>
+        <br /><a href="https://github.com/attogram/DAMS/blob/master/CHANGELOG.md">CHANGELOG</a>
+        <br /><a href="https://github.com/attogram/DAMS/blob/master/TODO.md">TODO</a>
+    </div>
+    <div class="col-sm-2">
+        <a href="https://packagist.org/packages/attogram/dams"><img src="https://poser.pugx.org/attogram/dams/v/stable" alt="Latest Stable Version" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/dams"><img src="https://poser.pugx.org/attogram/dams/downloads" alt="Total Downloads" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/dams"><img src="https://poser.pugx.org/attogram/dams/v/unstable" alt="Latest Unstable Version" /></a>
+        <br /><a href="https://github.com/attogram/DAMS"><img src="https://poser.pugx.org/attogram/dams/license" alt="License" /></a>
+    </div>
+    <div class="col-sm-3">
+    </div>
+  </div>
+
 
 <footer class="text-center">
   <p><br /></p>
